--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,23 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
-    normalize.css removes cross-browser differences in defaults, e.g.,
-    differences in how form elements appear between Firefox and IE
-    See: http://necolas.github.com/normalize.css/
-  -->
-  <link rel="stylesheet" href="/css/normalize.css">
-  <!--
-    application.css is where you put your styles
-  -->
+  <meta charset="utf-8">
+  <title>Flat UI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Loading Bootstrap -->
+  <link href="css/bootstrap.css" rel="stylesheet">
+
+  <!-- Loading Flat UI -->
+  <link href="css/flat-ui.css" rel="stylesheet">
+  <link rel="shortcut icon" href="images/favicon.ico">
+
+  <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
+  <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+  <![endif]-->
+
   <link rel="stylesheet" href="/css/application.css">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <title></title>
 </head>
 <body>
   <%= yield %>
+
+
+
+
+  <!-- Load JS here for greater good =============================-->
+  <script src="js/jquery-1.8.2.min.js"></script>
+  <script src="js/jquery-ui-1.10.0.custom.min.js"></script>
+  <script src="js/jquery.dropkick-1.0.0.js"></script>
+  <script src="js/custom_checkbox_and_radio.js"></script>
+  <script src="js/custom_radio.js"></script>
+  <script src="js/jquery.tagsinput.js"></script>
+  <script src="js/bootstrap-tooltip.js"></script>
+  <script src="js/jquery.placeholder.js"></script>
+  <script src="http://vjs.zencdn.net/c/video.js"></script>
+  <script src="js/application.js"></script>
+  <!--[if lt IE 8]>
+    <script src="js/icon-font-ie7.js"></script>
+    <script src="js/icon-font-ie7-24.js"></script>
+  <![endif]-->
+
 </body>
 </html>
