still attempting to add masonry to homepage

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,9 +1,38 @@
 <div class="container">
-  <div class="row">
+  <div id="photos" class="row">
     <% if @photos %>
       <% @photos.each do |p| %>
-        <div class="span3"><a href="/albums/<%= p.album.id %>/photos/<%= p.id %>"><img src=<%= p.source %> class="img-polaroid"></a></div>
+        <div class="photo span3"><a href="/albums/<%= p.album.id %>/photos/<%= p.id %>"><img src=<%= p.source_url(:thumb) %> class="img-polaroid"></a></div>
       <% end %>
     <% end %>
   </div>
 </div>
+
+<script>
+  $(document).ready(function () {
+    $("#photos").masonry({
+      itemSelector: '.photo',
+      isAnimated: true,
+      columnWidth: function( containerWidth ) {
+ 
+        // do nothing for browsers with no media query support
+        // .container will always be 940px
+        if($(".container").width() == 940) {
+          return 240;
+        } 
+ 
+        var width = $(window).width();
+        var col = 300;
+ 
+        if(width < 1200 && width >= 980) {
+          col = 240;
+        }
+        else if(width < 980 && width >= 768) {
+          col = 186;
+        }
+ 
+        return col;
+      }
+    });
+  });
+</script>
