--- a/app/views/photos/show.erb
+++ b/app/views/photos/show.erb
@@ -1,4 +1,4 @@
 <h3><%= @photo.source %></h3>
 <% if @photo.source? %>
-  <img src="<%= @photo.source %>">
+  <img src="<%= @photo.source_url %>">
 <% end %>
